@@ -1,6 +1,7 @@
 0.27:
   add fmt_strm
   add iob_addbuf_munmap
+  add socket_deferaccept
 
 0.26:
   fix really pathological case where io_timeouted would never
